# macmikase

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  macmikase.yaml  pyproject.toml
.github/workflows/: lint.yml
ansible/: ansible.cfg  inventory.yml  playbook.yml  requirements.yml
chezmoi/: .chezmoi.toml.tmpl  .chezmoidata.yaml  .chezmoiignore  dot_amethyst.tmpl  dot_amethyst.yml.tmpl  dot_bashrc.tmpl  dot_inputrc  run_after_10-setup-theme.sh.tmpl
chezmoi/dot_config/: starship.toml.tmpl
chezmoi/dot_cursor/: mcp.json
docs/: architecture-with-diagrams.md  architecture.md  cli-reference.md  configuration-reference.md  development.md  editor-theming.md  ghostty-quick-terminal.md  macmikase-menu.md  troubleshooting.md
plugins/bw-launcher/: Cargo.toml  README.md  plugin.ron
plugins/bw-launcher/src/: main.rs
plugins/exa-launcher/: Cargo.toml  README.md  config.toml.example  plugin.ron
plugins/exa-launcher/src/: main.rs
scripts/: migrate-themes.py  sync-theme-colors.py
src/macmikase/: __init__.py  chezmoi.py  cli.py  config.py  schema.py  theme_tui.py  themes.py
tests/: conftest.py  test-config.yaml  test_chezmoi.py  test_config.py  test_integration.py  test_theme_tui.py  test_themes.py
themes/: README.md  WALLPAPERS.md  download-backgrounds.sh
themes/_base/: tokenColors.json
themes/catppuccin/: alacritty.toml  antigravity.conf  btop.theme  cosmic-term.ron  cosmic.ron  cursor.json  ghostty.conf  kitty.conf  mako.ini  nvim.lua  opencode.json  starship.toml  theme.yaml  waybar.css
themes/catppuccin-latte/: alacritty.toml  antigravity.conf  cosmic-term.ron  cosmic.ron  cursor.json  kitty.conf  mako.ini  opencode.json  starship.toml  theme.yaml
themes/cosmic-dark/: alacritty.toml  antigravity.conf  btop.theme  chromium.theme  cosmic-term.ron  cosmic.ron  cursor.json  ghostty.conf  kitty.conf  mako.ini  nvim.lua  opencode.json  starship.toml  theme.yaml  waybar.css
themes/cosmic-light/: alacritty.toml  antigravity.conf  btop.theme  chromium.theme  cosmic-term.ron  cosmic.ron  cursor.json  ghostty.conf  icons.theme  kitty.conf  (+6 more)
(+167 files in other folders)
