[project]
name = "macmikase"
version = "0.2.0"
description = "macOS Omakase - Opinionated Mac workstation configuration"
authors = [
    { name = "Paul Brav", email = "paulbrav@github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
urls = { homepage = "https://github.com/paulbrav/macmikase", repository = "https://github.com/paulbrav/macmikase" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "textual>=0.76,<0.90",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ansible>=9.0",
    "ansible-lint>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
macmikase = "macmikase.cli:run"
theme-tui = "macmikase.theme_tui:run"
macmikase-cli = "macmikase.cli:run"
macmikase-config = "macmikase.config:_main"
macmikase-chezmoi = "macmikase.chezmoi:_main"
macmikase-validate-config = "macmikase.schema:_main"
macmikase-themes-dir = "macmikase.themes:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
