[package]
name = "bw-launcher"
version = "0.1.0"
edition = "2021"
description = "Pop!_OS launcher plugin for Bitwarden vault access"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
secret-service = { version = "4.0", features = ["rt-async-io-crypto-rust"] }
zbus = { version = "4.4", features = ["async-io"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

